fix compose desktop